update yaml file of database & all-opsrequest
Signed-off-by: Fazle Rabbi Sarker <fazlerabbi@appscode.com>