@@ -31,42 +31,57 @@ namespace/demo created
 
 ## Overview
 
-Neo4j supports configuration via `neo4j.conf`. KubeDB uses `spec.configuration.secretName` to allow users to provide a custom configuration Secret. The operator mounts and applies this configuration automatically.
+Neo4j supports configuration via key-value pairs. KubeDB uses `spec.configuration.secretName` to allow users to provide a custom configuration Secret. The operator merges these key-value entries into the Neo4j configuration and restarts the cluster automatically.
 
-In this tutorial, we will configure `dbms.logs.query.enabled` and `server.memory.heap.initial_size`.
+In this tutorial, we will configure `dbms.logs.query.enabled`, `dbms.logs.query.parameter_logging`, and JVM options via `server.jvm.additional`.
 
 ## Custom Configuration
 
-At first, let's create a custom `neo4j.conf` file:
+KubeDB expects the custom configuration Secret to use `stringData` where each key is a Neo4j configuration property name and the corresponding value is its setting. Create the Secret:
 
-```properties
-dbms.logs.query.enabled=INFO
-server.memory.heap.initial_size=512m
-server.memory.heap.max_size=512m
-```
-
-Now, create a Secret with this configuration file.
-
-```bash
-$ kubectl create secret generic -n demo neo4j-configuration \
-  --from-file=neo4j.conf=./neo4j.conf
-secret/neo4j-configuration created
-```
-
-Verify the Secret has the configuration file.
-
-```bash
-$ kubectl get secret -n demo neo4j-configuration -o yaml
+```yaml
 apiVersion: v1
-data:
-  neo4j.conf: <base64-encoded-content>
+stringData:
+  dbms.logs.query.enabled: "INFO"
+  dbms.logs.query.parameter_logging: "true"
+  server.jvm.additional: |-
+    -XX:+UseG1GC
+    -XX:-OmitStackTraceInFastThrow
+    -XX:+AlwaysPreTouch
+    -XX:+UnlockExperimentalVMOptions
+    -XX:+TrustFinalNonStaticFields
+    -XX:+DisableExplicitGC
+    -Djdk.nio.maxCachedBufferSize=1024
+    -Dio.netty.tryReflectionSetAccessible=true
+    -Djdk.tls.ephemeralDHKeySize=2048
+    -Djdk.tls.rejectClientInitiatedRenegotiation=true
+    -XX:FlightRecorderOptions=stackdepth=256
+    -XX:+UnlockDiagnosticVMOptions
+    -XX:+DebugNonSafepoints
+    --add-opens=java.base/java.nio=ALL-UNNAMED
+    --add-opens=java.base/java.io=ALL-UNNAMED
+    --add-opens=java.base/sun.nio.ch=ALL-UNNAMED
+    -Dlog4j2.disable.jmx=true
 kind: Secret
 metadata:
   name: neo4j-configuration
   namespace: demo
 ```
 
-Now, create Neo4j CRD specifying `spec.configuration.secretName` field.
+```bash
+$ kubectl apply -f neo4j-configuration-secret.yaml
+secret/neo4j-configuration created
+```
+
+Verify the Secret was created:
+
+```bash
+$ kubectl get secret -n demo neo4j-configuration
+NAME                 TYPE     DATA   AGE
+neo4j-configuration  Opaque   3      10s
+```
+
+Now, create the Neo4j CRD specifying `spec.configuration.secretName`:
 
 ```yaml
 apiVersion: kubedb.com/v1alpha2
@@ -81,7 +96,7 @@ spec:
     secretName: neo4j-configuration
   storageType: Durable
   storage:
-    storageClassName: "standard"
+    storageClassName: "local-path"
     accessModes:
     - ReadWriteOnce
     resources:
@@ -95,21 +110,74 @@ $ kubectl apply -f https://github.com/kubedb/docs/raw/{{< param "info.version" >
 neo4j.kubedb.com/custom-neo4j created
 ```
 
-Now, wait for the Neo4j to be ready.
+Now, wait for the Neo4j cluster to be ready:
 
 ```bash
-$ kubectl get neo4j -n demo custom-neo4j
-NAME           VERSION   STATUS   AGE
-custom-neo4j   2025.11.2 Ready    3m
+$ kubectl get neo4j -n demo custom-neo4j -w
+NAME           VERSION     STATUS   AGE
+custom-neo4j   2025.12.1   Ready    3m
 ```
 
-Verify the applied configuration:
+## Verify the Applied Configuration
+
+To confirm the settings are active, connect to Neo4j via `cypher-shell` and run a `SHOW SETTINGS` query. First, get the default auth credentials:
 
 ```bash
-$ kubectl exec -it -n demo custom-neo4j-0 -- cat /var/lib/neo4j/conf/neo4j.conf | grep -E "dbms.logs.query.enabled|server.memory.heap"
-dbms.logs.query.enabled=INFO
-server.memory.heap.initial_size=512m
-server.memory.heap.max_size=512m
+$ kubectl get secret -n demo custom-neo4j-auth \
+    -o jsonpath='{.data.password}' | base64 -d
+<your-password>
+```
+
+Then exec into a Neo4j pod and run `cypher-shell`:
+
+```bash
+$ kubectl exec -it -n demo custom-neo4j-0 -- \
+    cypher-shell -u neo4j -p <your-password> \
+    "SHOW SETTINGS
+     YIELD name, value
+     WHERE name STARTS WITH 'dbms.logs.query'
+     RETURN name, value
+     ORDER BY name;"
+```
+
+Expected output:
+
+```
++-----------------------------------------------------------+
+| name                                   | value            |
++-----------------------------------------------------------+
+| "dbms.logs.query.enabled"              | "INFO"           |
+| "dbms.logs.query.parameter_logging"    | "true"           |
++-----------------------------------------------------------+
+
+2 rows
+```
+
+You can also query other setting groups. For example, to check the Neo4j data directory paths:
+
+```bash
+$ kubectl exec -it -n demo custom-neo4j-0 -- \
+    cypher-shell -u neo4j -p <your-password> \
+    "SHOW SETTINGS
+     YIELD name, value
+     WHERE name STARTS WITH 'server.directories'
+     RETURN name, value
+     ORDER BY name
+     LIMIT 3;"
+```
+
+Expected output:
+
+```
++---------------------------------------------------------------------+
+| name                                   | value                     |
++---------------------------------------------------------------------+
+| "server.directories.data"              | "/var/lib/neo4j/data"     |
+| "server.directories.import"            | "/var/lib/neo4j/import"   |
+| "server.directories.logs"              | "/var/lib/neo4j/logs"     |
++---------------------------------------------------------------------+
+
+3 rows
 ```
 
 ## Cleaning up
